--- a/views/voter/review.ejs
+++ b/views/voter/review.ejs
@@ -189,9 +189,16 @@
             <br />
           </ul>
 
-          <form id="voteForm">
-            <input type="hidden" id="voterHash" value="20292002480@ms.bulsu.edu.ph" />
+          <form id="voteForm" action="/submit-votes-to-blockchain" method="POST">
+            <!-- Hidden inputs for each candidate object -->
+            <input type="hidden" name="president" value="<%= JSON.stringify(president) %>" />
+            <input type="hidden" name="vicePresident" value="<%= JSON.stringify(vicePresident) %>" />
+            <input type="hidden" name="senator" value="<%= JSON.stringify(senator) %>" />
+            <input type="hidden" name="governor" value="<%= JSON.stringify(governor) %>" />
+            <input type="hidden" name="viceGovernor" value="<%= JSON.stringify(viceGovernor) %>" />
+            <input type="hidden" name="boardMember" value="<%= JSON.stringify(boardMember) %>" />
 
+            <!-- Submit button -->
             <div class="button-container">
               <button class="button-back" type="button" onclick="window.location.href='/vote'">
                 <svg fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
@@ -201,7 +208,7 @@
               </button>
 
               <input type="hidden" id="voteData" value="Vote data placeholder" />
-              <button type="button" id="submitBtn" value="Submit Votes to Blockchain" onclick="" class="button">
+              <button type="submit" id="submitBtn" value="Submit Votes to Blockchain" onclick="" class="button">
                 <span class="fold"></span>
 
                 <div class="points_wrapper">
